traversal.snake.Snake.scala.error
Compilation error:
Snake:9: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
        return true
               ^Snake:9: warning: enclosing method posfin has result type Unit: return value discarded
        return true
        ^Snake:12: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
    return false
           ^Snake:12: warning: enclosing method posfin has result type Unit: return value discarded
    return false
    ^Snake:28: error: value unary_! is not a member of Unit
while (!posfin()) {
       ^